fix for ASYNCWEB-34 using ULR in place of URI for parsing URL sent by the client
git-svn-id: https://svn.apache.org/repos/asf/mina/asyncweb/trunk@807577 13f79535-47bb-0310-9956-ffa450edef68